assets/css/index.css
*,
*:before,
*:after {
  box-sizing: border-box;
}

@font-face {
  font-family: vga;
  src: url(../fonts/PxPlus_IBM_VGA8.ttf);
}

:root {
  --primary: lime;
}

html,
body {
  height: 100%;
  margin: 0;
}

html {
  font-family: vga, monospace;
  font-size: 16px;
  line-height: 1.3;

  /* we can try! */
  font-smooth: never;
  -webkit-font-smoothing: none;
}

body {
  background: black;
  color: var(--primary);

  background-image: url(../images/background.png);
  background-repeat: repeat;

  display: flex;
  align-items: center;
  justify-content: center;
  flex-flow: row nowrap;
}

p,
ul {
  margin: 1rem 0;
}

a {
  color: var(--primary);
}

ul {
  list-style-type: square;
  list-style-type: "* ";
}

main {
  border: solid 1px var(--primary);
  background: black;
}

h1 {
  margin: 0.5em 1em;
  font-size: 3rem;
  font-weight: inherit;
}

::selection {
  background: var(--primary);
  color: black;
}

@media (min-width: 1000px) {
  body.static h1 {
    font-size: 10vw;
  }
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  body {
    background-image: url(../images/background@2x.png);
  }
}

/* dynamic styles */

body.dynamic main {
  font-size: 1.5rem;
}

body.dynamic main {
  width: 100%;
  max-width: 800px;
  padding: 2rem;
}

body.dynamic h1 {
  border-bottom: solid 1px #005000;
  margin: 0 0 1rem 0;
}

body.dynamic ul {
  margin: 0;
}

body.dynamic .content {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 1rem;
}

/* meters */

.meter-container {
  display: flex;
  flex-flow: column nowrap;
  line-height: 1;
}

.meter-container:not(:last-child) {
  margin-bottom: 1rem;
}

.meter-container .meter {
  margin-bottom: 0.5rem;
}

.meter {
  display: flex;
  border: solid 1px var(--primary);
}

.meter .meter-value {
  display: inline-block;
  height: 1em;
  background: var(--primary);
}

